testsuite/tests/typecheck/should_fail/T18357.stderr

T18357.hs:13:3: error:
    • Data constructor ‘MkT’ returns type ‘W’
        instead of an instance of its parent type ‘T’
    • In the definition of data constructor ‘MkT’
      In the newtype declaration for ‘T’
